...
            }
            .padding()

            Button(action: {
                viewModel.fetchWeatherByLocationForInteraction()
            }) {
                Text("Use Current Location")
            }
            .padding()

            Button("Back to Home") {
                coordinator.popToRoot()
            }
            .padding()
        }
        .task {
            viewModel.loadLastSearchedCity()
...
